--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
     <p id="luasPersegiPanjang"></p>
     <p id="kelilingPersegiPanjang"></p>
 
+    <footer> Tugas Revou dibuat oleh Gracia Rosalina . H . </footer>
+
 
  <script src="script.js"></script>
 </body>
