--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <p id="luasPersegiPanjang"></p>
     <p id="kelilingPersegiPanjang"></p>
 
-    <footer> Tugas Revou dibuat oleh Gracia Rosalina . H . </footer>
+    <footer> Tugas Revou dibuat oleh Gracia Rosalina</footer>
 
 
  <script src="script.js"></script>
